--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\navan\AppData\Local\Temp\testng-eclipse-1954243571\testng-customsuite.xml</span>
+                    <span>C:\Users\navan\AppData\Local\Temp\testng-eclipse-298612282\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testCases.LoginTest" class="method navigator-link" hash-for-method="LoginwithInValidCredentials">LoginwithInValidCredentials</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="testCases.RoundTripTest" class="method navigator-link" hash-for-method="RoundTrip_Students">RoundTrip_Students</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.LoginTest</span>
+              <span class="class-name">testCases.RoundTripTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginwithInValidCredentials">
-                  </a> <!-- LoginwithInValidCredentials -->
-                  <span class="method-name">LoginwithInValidCredentials</span>
+                  <a name="RoundTrip_Students">
+                  </a> <!-- RoundTrip_Students -->
+                  <span class="method-name">RoundTrip_Students</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\navan\AppData\Local\Temp\testng-eclipse-1954243571\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\navan\AppData\Local\Temp\testng-eclipse-298612282\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.LoginTest&quot;&gt;
+      &lt;class name=&quot;testCases.RoundTripTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;LoginwithInValidCredentials&quot;/&gt;
+          &lt;include name=&quot;RoundTrip_Students&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testCases.LoginTest --&gt;
+      &lt;/class&gt; &lt;!-- testCases.RoundTripTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'LoginwithInValidCredentials')
-data.setCell(0, 2, 'testCases.LoginTest')
-data.setCell(0, 3, 8253);
+data.setCell(0, 1, 'RoundTrip_Students')
+data.setCell(0, 2, 'testCases.RoundTripTest')
+data.setCell(0, 3, 35507);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 35 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,15 +213,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">testCases.LoginTest</span>
+              <span class="ignored-class-name">testCases.RoundTripTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TestLogin</span>
-                <br/>
-                <span class="ignored-method-name">LoginwithValidCredentials</span>
+                <span class="ignored-method-name">RoundTrip_FamilyFriends</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -233,19 +231,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.RoundTripTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Startup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginwithInValidCredentials</span>
-                <span class="method-start">28278 ms</span>
+                <span class="method-name">RoundTrip_Students</span>
+                <span class="method-start">8229 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">close</span>
-                <span class="method-start">36534 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
